# pycc4s

./: .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
.github/workflows/: testing.yml
src/pycc4s/: __init__.py
src/pycc4s/core/: __init__.py  algorithms.py  inputs.py  objects.py
src/pycc4s/custodian/: __init__.py  jobs.py
src/pycc4s/workflows/: __init__.py  run.py
src/pycc4s/workflows/flows/: __init__.py  core.py
src/pycc4s/workflows/jobs/: __init__.py  base.py  core.py  vasp.py
src/pycc4s/workflows/sets/: __init__.py  base.py  core.py  vasp.py
tests/: conftest.py  test_pycc4s.py
tests/core/: test_algorithms.py  test_inputs.py
tests/test_data/: cc4s.in  cc4s_invalid.in
tests/workflows/sets/: test_base.py
