[tool.poetry]
name = "pycc4s"
version = "0.1.0"
description = ""
authors = ["David Waroquiers <david.waroquiers@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
monty = "^2022.4.26"
pymatgen = "^2022.7.25"

[tool.poetry.extras]
dev = ["pre-commit>=2.20.0"]
tests = [
    "pytest>=5.2",
    "types-PyYAML>=6.0.11",
    "pytest-mock==3.6.1",
    "FireWorks==2.0.3",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
