[build-system]
requires = ["setuptools >= 63.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycc4s"
description = ""
version = "0.1.0"
authors = [{name = "David Waroquiers", email = "david.waroquiers@gmail.com"}]
requires-python = '>="3.8"'
dependencies = [
    "monty>=2022.4.26",
    "yaml>=6.0",
]

[project.optional-dependencies]
dev = ["pre-commit>=2.20.0"]
tests = [
    "pytest>=7.1.2",
    "types-PyYAML>=6.0.11",
]
